MDL-84816 message: Make sure the 'see all' link stays visible

--- a/theme/boost/scss/moodle/popover-region.scss
+++ b/theme/boost/scss/moodle/popover-region.scss
@@ -87,6 +87,7 @@ $content-header-footer-height: $region-header-height + $region-footer-height;
     right: 0;
     top: 0;
     height: $region-container-height;
+    max-height: 80vh;
     width: $region-container-width;
     border: $standard-border;
     transition: height 0.25s;
